--- a/Aula03 -- 29-08-2020/AppMapa/AppMapa/Base.lproj/Main.storyboard
+++ b/Aula03 -- 29-08-2020/AppMapa/AppMapa/Base.lproj/Main.storyboard
@@ -96,7 +96,7 @@
             </objects>
             <point key="canvasLocation" x="1429.5999999999999" y="-513.19340329835086"/>
         </scene>
-        <!--Alarme View Controller-->
+        <!--Alarme-->
         <scene sceneID="pOL-QN-Uxz">
             <objects>
                 <viewController id="gHi-Tk-YmM" customClass="AlarmeViewController" customModule="AppMapa" customModuleProvider="target" sceneMemberID="viewController">
@@ -104,7 +104,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="X2j-Mp-no3">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="X2j-Mp-no3">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                             </mapView>
                         </subviews>
@@ -117,6 +117,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cX4-09-sBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Alarme" id="y0k-JP-WDo">
+                        <barButtonItem key="rightBarButtonItem" title="Localizar" style="plain" id="ZGI-x1-QE3">
+                            <connections>
+                                <action selector="localizar:" destination="gHi-Tk-YmM" id="ScD-x9-iAB"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="mapa" destination="X2j-Mp-no3" id="dfj-i1-vhQ"/>
                     </connections>
